--- a/labs/DB0201EN/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
+++ b/labs/DB0201EN/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Replace the placeholder values with your actual Db2 hostname, username, and password:\n",
-    "dsn_hostname = \"YourDb2Hostname\" # e.g.: \"dashdb-txn-sbox-yp-dal09-04.services.dal.bluemix.net\"\n",
-    "dsn_uid = \"YourDb2Username\"        # e.g. \"abc12345\"\n",
-    "dsn_pwd = \"YoueDb2Password\"      # e.g. \"7dBZ3wWt9XN6$o0J\"\n",
+    "dsn_hostname = \"\" # e.g.: \"dashdb-txn-sbox-yp-dal09-04.services.dal.bluemix.net\"\n",
+    "dsn_uid = \"\"        # e.g. \"abc12345\"\n",
+    "dsn_pwd = \"\"      # e.g. \"7dBZ3wWt9XN6$o0J\"\n",
     "\n",
     "dsn_driver = \"{IBM DB2 ODBC DRIVER}\"\n",
     "dsn_database = \"BLUDB\"            # e.g. \"BLUDB\"\n",
@@ -128,9 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to database:  BLUDB as user:  kfv32873 on host:  dashdb-txn-sbox-yp-lon02-02.services.eu-gb.bluemix.net\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL. Just RUN it with Shift + Enter\n",
     "#Create database connection\n",
@@ -152,9 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DBMS_NAME:  DB2/LINUXX8664\n",
+      "DBMS_VER:   11.01.0404\n",
+      "DB_NAME:    BLUDB\n"
+     ]
+    }
+   ],
    "source": [
     "#Retrieve Metadata for the Database Server\n",
     "server = ibm_db.server_info(conn)\n",
@@ -166,9 +184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DRIVER_NAME:           libdb2.a\n",
+      "DRIVER_VER:            11.05.0400\n",
+      "DATA_SOURCE_NAME:      BLUDB\n",
+      "DRIVER_ODBC_VER:       03.51\n",
+      "ODBC_VER:              03.01.0000\n",
+      "ODBC_SQL_CONFORMANCE:  EXTENDED\n",
+      "APPL_CODEPAGE:         1208\n",
+      "CONN_CODEPAGE:         1208\n"
+     ]
+    }
+   ],
    "source": [
     "#Retrieve Metadata for the Database Client / Driver\n",
     "client = ibm_db.client_info(conn)\n",
@@ -194,9 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ibm_db.close(conn)"
    ]
